# confluence-poster

./: .gitignore  README.md  pyproject.toml
confluence_poster/: __main__.py  configuration.py  confluence_poster.py  confluence_session_builder.py  file_converter.py  processed_file.py  ssl_context_adapter.py
docs/: confluence_poster.run.xml  pytest-runner.run.xml
tests/: test_confluence_poster.py  test_file_converter.py
tests/data/: blockquote.md  code_block.md  test-short-converted.html  test-short.md  test.md
